--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,8 @@
 	},
 	"dependencies": {
 		"axios": "^1.7.7",
+		"emailjs": "^4.0.3",
+		"emailjs-com": "^3.2.0",
 		"framer-motion": "^11.11.10",
 		"lucide-react": "^0.454.0",
 		"next-themes": "^0.3.0",
