--- a/Backend/package.json
+++ b/Backend/package.json
@@ -20,7 +20,8 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.3",
-    "qr-image": "^3.2.0"
+    "qr-image": "^3.2.0",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
